[gd_scene load_steps=10 format=2]

[ext_resource path="res://arts/abstrastArt/playerbullet.png" type="Texture" id=1]
[ext_resource path="res://objects/weapons/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://arts/pixelArt/fireball.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends Timer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _on_Timer_timeout():
	print(\"done\");
# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="CircleShape2D" id=1]
radius = 22.0227

[node name="PlayerBullet" type="RigidBody2D" groups=["bullet"]]
collision_layer = 4
collision_mask = 9
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Style0" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Style0"]
scale = Vector2( -0.945869, -0.945869 )
texture = ExtResource( 1 )

[node name="Style1" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Style1"]
scale = Vector2( 3, 3 )
frames = SubResource( 6 )
playing = true

[node name="ExplodeTimer" type="Timer" parent="Style1"]
one_shot = true
script = SubResource( 2 )

[node name="Style2" type="Node2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Style2"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -15, 16, -15, -13, 21, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="timeout" from="Style1/ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
